--- a/src/components/pages/public/sign-up/styles.css
+++ b/src/components/pages/public/sign-up/styles.css
@@ -1,4 +1,4 @@
-.aws-amplify-app-signin_container {
+.aws-amplify-app-signup_container {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -8,12 +8,12 @@
     height: 100vh;
 }
 
-.aws-amplify-app-signin_image {
+.aws-amplify-app-signup_image {
     height: 40px;
     width: 40px;
 }
 
-.aws-amplify-app-signin_header {
+.aws-amplify-app-signup_header {
     font-family: Lato;
     font-size: 24px;
     font-weight: 300;
@@ -22,7 +22,7 @@
     margin: 16px 0 20px 0;
 }
 
-.aws-amplify-app-signin_card {
+.aws-amplify-app-signup_card {
     display: flex;
     align-items: center;
     padding: 32px;
@@ -30,18 +30,18 @@
     margin-bottom: 16px;
 }
 
-.aws-amplify-app-signin_social-buttons-container {
+.aws-amplify-app-signup_social-buttons-container {
     display: flex;
     flex-direction: column;
     padding-right: 24px;
     width: 50%;
 }
 
-.aws-amplify-app-signin_social-buttons-container > :not(:last-child) {
-    margin-bottom: 24px;
+.aws-amplify-app-signup_social-buttons-container > :not(:last-child) {
+    margin-bottom: 32px;
 }
 
-.aws-amplify-app-signin_inputs-container {
+.aws-amplify-app-signup_inputs-container {
     display: flex;
     flex-direction: column;
     padding-left: 24px;
@@ -49,45 +49,50 @@
     width: 50%;
 }
 
-.aws-amplify-app-signin_inputs-container > :not(:first-child) {
+.aws-amplify-app-signup_inputs-container > :not(:first-child) {
     margin-top: 24px;
 }
 
-.aws-amplify-app-signin_inputs-container > :last-child {
+.aws-amplify-app-signup_inputs-container > :last-child {
     margin-top: 16px;
 }
 
-.aws-amplify-app-signin_social-icon {
+.aws-amplify-app-signup_social-icon {
     position: absolute;
     left: 16px;
 }
 
-.aws-amplify-app-signin_facebook-button {
+.aws-amplify-app-signup_facebook-button {
     background-color: #004ca9;
     border-color: #004ca9;
     color: #fff;
 }
 
-.aws-amplify-app-signin_facebook-button:hover {
+.aws-amplify-app-signup_facebook-button:hover {
     background-color: #023a7e;
     border-color: #023a7e;
     color: #fff;
 }
 
-.aws-amplify-app-signin_twitter-button {
+.aws-amplify-app-signup_twitter-button {
     background-color: #00b0f3;
     border-color: #00b0f3;
     color: #fff;
 }
 
-.aws-amplify-app-signin_twitter-button:hover {
+.aws-amplify-app-signup_twitter-button:hover {
     background-color: #009acf;
     border-color: #009acf;
     color: #fff;
 }
 
-.aws-amplify-app-signin_link {
+.aws-amplify-app-signup_link {
     color: #01b6f5;
     text-align: center;
     font-size: 1rem;
+}
+
+.aws-amplify-app-signup_checkbox span {
+    font-size: 14px !important;
+    line-height: 1.5rem !important;
 }
