--- a/src/components/pages/public/sign-up/styles.css
+++ b/src/components/pages/public/sign-up/styles.css
@@ -30,17 +30,6 @@
     margin-bottom: 16px;
 }
 
-.aws-amplify-app-signup_social-buttons-container {
-    display: flex;
-    flex-direction: column;
-    padding-right: 24px;
-    width: 50%;
-}
-
-.aws-amplify-app-signup_social-buttons-container > :not(:last-child) {
-    margin-bottom: 32px;
-}
-
 .aws-amplify-app-signup_inputs-container {
     display: flex;
     flex-direction: column;
@@ -57,42 +46,14 @@
     margin-top: 16px;
 }
 
-.aws-amplify-app-signup_social-icon {
-    position: absolute;
-    left: 16px;
-}
-
-.aws-amplify-app-signup_facebook-button {
-    background-color: #004ca9;
-    border-color: #004ca9;
-    color: #fff;
-}
-
-.aws-amplify-app-signup_facebook-button:hover {
-    background-color: #023a7e;
-    border-color: #023a7e;
-    color: #fff;
-}
-
-.aws-amplify-app-signup_twitter-button {
-    background-color: #00b0f3;
-    border-color: #00b0f3;
-    color: #fff;
-}
-
-.aws-amplify-app-signup_twitter-button:hover {
-    background-color: #009acf;
-    border-color: #009acf;
-    color: #fff;
-}
-
 .aws-amplify-app-signup_link {
     color: #01b6f5;
     text-align: center;
     font-size: 1rem;
 }
 
-.aws-amplify-app-signup_checkbox span {
-    font-size: 14px !important;
-    line-height: 1.5rem !important;
+.aws-amplify-app-signup_terms-conditions {
+    font-size: 14px;
+    line-height: 1.5rem;
+    text-align: center;
 }
