feat: implement message component UI

--- a/src/components/pages/public/sign-in/styles.css
+++ b/src/components/pages/public/sign-in/styles.css
@@ -1,4 +1,5 @@
 .aws-amplify-app-signin_container {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
